# merkle_tree

./: .gitignore  Cargo.toml  Makefile  README.md  input-noeol.txt  input-odd.txt  input-simple.txt  mix.exs  perf_test.exs
benches/: benchmark.rs
lib/: merkle_tree.ex  merkle_tree_rust.ex
native/merkle_tree/: Cargo.toml  README.md
native/merkle_tree/src/: lib.rs
src/: lib.rs  main.rs
test/: merkle_tree_test.exs  test_helper.exs
